Add directory structure for RTM project and CMakeLists entries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,9 @@ set(CMAKE_C_STANDARD 99)
 set(GCC_COVERAGE_COMPILE_FLAGS "-g -Wall")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
-include_directories(${CMAKE_SOURCE_DIR})
+include_directories(
+        ${CMAKE_SOURCE_DIR}
+        routing_table_manager/include)
 
 add_executable(server_no_multiplexing utils.c unix_domain_sockets/no_multiplexing/server.c)
 add_executable(server_multiplexing
@@ -14,5 +16,13 @@ add_executable(server_multiplexing
         unix_domain_sockets/multiplexing/fd_set_mgmt.c)
 add_executable(client utils.c unix_domain_sockets/client.c)
 
+add_executable(rtm_server utils.c routing_table_manager/src/rtm_server.c)
+add_executable(rtm_client utils.c routing_table_manager/src/rtm_client.c)
+find_library(GCDS gcds HINTS routing_table_manager/lib)
+target_link_libraries(rtm_server PUBLIC ${GCDS})
+target_link_libraries(rtm_client PUBLIC ${GCDS})
+
 install(TARGETS server_no_multiplexing client DESTINATION unix_domain_sockets/no_multiplexing)
 install(TARGETS server_multiplexing client DESTINATION unix_domain_sockets/multiplexing)
+
+install(TARGETS rtm_server rtm_client DESTINATION routing_table_manager)
