Add unit tests for validation of IPv4 addresses (RTM project)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,26 +5,47 @@ set(CMAKE_C_STANDARD 99)
 set(GCC_COVERAGE_COMPILE_FLAGS "-g -Wall")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
-include_directories(
-        ${CMAKE_SOURCE_DIR}
-        routing_table_manager/include)
-
-add_executable(server_no_multiplexing utils.c unix_domain_sockets/no_multiplexing/server.c)
-add_executable(server_multiplexing
-        utils.c
-        unix_domain_sockets/multiplexing/server.c
-        unix_domain_sockets/multiplexing/fd_set_mgmt.c)
-add_executable(client utils.c unix_domain_sockets/client.c)
-
 set(RTM_DIR routing_table_manager)
 set(RTM_SRC ${RTM_DIR}/src)
-add_executable(rtm_server utils.c ${RTM_SRC}/rtm_server.c ${RTM_SRC}/rtm.c ${RTM_SRC}/input.c)
-add_executable(rtm_client utils.c ${RTM_SRC}/rtm_client.c ${RTM_SRC}/rtm.c)
+set(UDS_DIR unix_domain_sockets)
+set(UDS_NMP ${UDS_DIR}/no_multiplexing)
+set(UDS_MP ${UDS_DIR}/multiplexing)
+
+include_directories(
+        ${CMAKE_SOURCE_DIR}
+        ${RTM_DIR}/include
+        ${RTM_DIR}/unity
+        ${RTM_DIR}/src
+)
+
+# --------------------------------------------------------------------------------------------------
+# Unix domain sockets
+# --------------------------------------------------------------------------------------------------
+
+add_executable(client utils.c ${UDS_DIR}/client.c)
+
+add_executable(server_no_multiplexing utils.c ${UDS_NMP}/server.c)
+install(TARGETS server_no_multiplexing client DESTINATION ${UDS_NMP})
+
+add_executable(server_multiplexing utils.c ${UDS_MP}/server.c ${UDS_MP}/fd_set_mgmt.c)
+install(TARGETS server_multiplexing client DESTINATION ${UDS_DIR}/multiplexing)
+
+# --------------------------------------------------------------------------------------------------
+# Routing table manager project
+# --------------------------------------------------------------------------------------------------
+
 find_library(GCDS gcds HINTS ${RTM_DIR}/lib)
+
+add_executable(rtm_server utils.c ${RTM_SRC}/rtm_server.c ${RTM_SRC}/rtm.c ${RTM_SRC}/input.c)
 target_link_libraries(rtm_server PUBLIC ${GCDS})
+
+add_executable(rtm_client utils.c ${RTM_SRC}/rtm_client.c ${RTM_SRC}/rtm.c)
 target_link_libraries(rtm_client PUBLIC ${GCDS})
 
-install(TARGETS server_no_multiplexing client DESTINATION unix_domain_sockets/no_multiplexing)
-install(TARGETS server_multiplexing client DESTINATION unix_domain_sockets/multiplexing)
+install(TARGETS rtm_server rtm_client DESTINATION ${RTM_DIR})
 
-install(TARGETS rtm_server rtm_client DESTINATION routing_table_manager)
+set(TEST_DIR ${RTM_DIR}/tests)
+
+add_executable(test_input ${RTM_DIR}/unity/unity.c ${TEST_DIR}/test_input.c ${RTM_SRC}/input.c
+        utils.c)
+install(TARGETS test_input DESTINATION ${TEST_DIR})
